# krusty-club

./: .gitignore  AP-protocol (4).md  AP-protocol(2).md  AP-protocol.md  Cargo.toml  README.md  README_client2.md  README_initializer.md
AP-unitn/: Cargo.toml
AP-unitn/src/: main.rs
Krusty_Club_2024/: Cargo.toml  README.md
Krusty_Club_2024/src/api/: mod.rs  simulation_controller.rs
Krusty_club_01/crates/wg_controller/: Cargo.toml
Krusty_club_01/crates/wg_controller/src/: command.rs
Krusty_club_01/crates/wg_drone/src/: drone.rs
crates/wg_controller/: Cargo.toml
crates/wg_controller/src/: controller.rs
crates/wg_drone/: Cargo.toml
crates/wg_drone/src/: drone.rs  lib.rs
crates/wg_network/src/: routing.rs
crates/wg_packet/src/: packet.rs
src/: gui.rs  main.rs
src/droneK/: drone.rs  mod.rs
src/network/: README_initializer.md  TOML_parser.rs  initializer.rs  mod.rs  simulation.rs
src/nodes/: README_server.md  client1.rs  client2.rs  mod.rs  server.rs
src/nodes/readme_nodes/: README_client1.md  README_client2.md  README_server.md
src/simulation_controller/: README_SC.md  SC_backend.rs  app.rs  chatUI.rs  controller.rs  gui_input_queue.rs  mod.rs  network_designer.rs
src/tests/: tests.rs
src/utils/: config.rs  mod.rs  serialization_fix.rs
topologies/: butterfly.toml  default.toml  double_chain.toml  star.toml  sub_net.toml  tree.toml
