[package]
name = "Krusty_Club_Project"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"]}
toml = { version = "0.8.19"}
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0"
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.0"
log = "0.4.22"
env_logger = "0.11.6"
config = "0.15.6"
eframe = "0.31.1"
egui = "0.31.1"
crossbeam = "0.8.4"

#eg of drones import
#group_a = { git = "https://github.com/groupA/drone" }
#group_b = { git = "https://github.com/groupB/drone" }

[features]
serialize = []