[package]
name = "Krusty_Club_Project"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"]}
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"] }
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.0"
log = "0.4.22"
env_logger = "0.11.6"
config = "0.15.6"
eframe = "0.29.1"
egui = "0.23"
crossbeam = "0.8.4"
petgraph = "0.7.1"
once_cell = "1.20.2"
base64 = "0.21.7"
image = "0.25.5"
show-image = { version = "0.14.1", features = ["image" ,] }
