[package]
name = "AP-unitn"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"]}
toml = { version = "0.8.19"}
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0"
crossbeam-channel = "0.5.13"
rand = "0.9"
log = "0.4.22"
env_logger = "0.11.6"
config = "0.15.6"
eframe = "0.31.1"
egui = "0.31.1"
crossbeam = "0.8.4"

#eg of drones import
Krusty_Club = { git = "https://github.com/Ossyk/Krusty_Club.git " }
LeDron_James = { git = "https://github.com/anass03/LeDron_James.git", features = ["log"] }
skylink = {git = "https://github.com/Suge42/Skylink_drone.git"}
dr_ones = { git = "https://github.com/Dr-Ones/drone" }
rustastic-drone = {git = "https://github.com/Rustastic/RustasticDrone"}
bagel_bomber = {git = "https://github.com/daw-dev/bagel-bomber"}
fungi_drone = { git = "https://github.com/Fungi-B-D/Fungi-Drone.git" }
wg_2024-rust = {git = "https://github.com/LuigiMiazzo17/unitn-advancedProgramming-WGL_2024-drone"}
rolling_drone = { git = "https://github.com/giorebecchi/RollingDrone.git"}
rustafarian-drone = {git = "https://github.com/Rustafarian-Unitn/rustafarian-drone"}
bincode = "2.0.0"
image = "0.25.6"
ap2024_unitn_cppenjoyers_drone = { git = "https://github.com/Cpp-enjoyers/drone.git", features =  ["unlimited_buffer"] }
petgraph = "0.8.1"
base64 = "0.21.7"
once_cell = "1.21.3"
serde_json = "1.0.140"

[features]
default = []
serialize = []
unlimited_buffer = ["ap2024_unitn_cppenjoyers_drone/unlimited_buffer"]


